@@ -1,3 +1,7 @@
+2008-04-26  Ludovic Courtès  <ludo@gnu.org>
+
+	* Makefile.am (EXTRA_DIST): Remove `ANON-CVS' and `SNAPSHOTS'.
+
 2008-03-12  Neil Jerram  <neil@ossau.uklinux.net>
 
 	* configure.in (AC_CONFIG_FILES): Add emacs/Makefile and
